refactored all the expiry handler code into a new class to keep main dart file clean

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -121,8 +121,7 @@
                 </div>
 
                 <div id="editor">
-                  <textarea id="editor-text" class="editor-input-text" name="editor-text" spellcheck="true"
-                            placeholder="Enter your URL - link" autofocus></textarea>
+                  <textarea id="editor-text" class="editor-input-text" name="editor-text" spellcheck="true" autofocus></textarea>
                 </div>
 
                   <div id="editor-tools-bottom">
