--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -90,7 +90,7 @@
               <div id="content-header">
                 <paper-tabs selected="0">
                   <paper-tab id="tab-url">URL Redirect</paper-tab>
-                  <paper-tab id="tab-src">Text / Source Code</paper-tab>
+                  <paper-tab id="tab-src">Text &amp; Source Code</paper-tab>
                 </paper-tabs>
               </div>
             </div>
@@ -113,7 +113,7 @@
                       </li>
                       <li>
                         <paper-button raised ng-click="toggle()" disabled>
-                          share
+                          copy
                         </paper-button>
                       </li>
                     </ul>
