--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html ng-app xmlns="http://www.w3.org/1999/html">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Spito Share v1.0</title>
     <link rel="stylesheet" href="style.css">
@@ -11,6 +11,8 @@
 
     <link rel="import" href="js_libs/bower_components/paper-input/paper-input.html">
     <link rel="import" href="js_libs/bower_components/paper-input/paper-input-decorator.html">
+
+    <link rel="import" href="js_libs/bower_components/paper-radio-group/paper-radio-group.html">
 
     <link rel="import" href="js_libs/bower_components/paper-button/paper-button.html">
     <link rel="import" href="js_libs/bower_components/paper-menu-button/paper-menu-button.html">
@@ -45,34 +47,34 @@
     <!-- Includes wNumb, libLink and the pips add-on -->
     <!--<script src="js_libs/noUiSlider.7.0.9/jquery.nouislider.all.min.js" type="text/javascript"></script>-->
 
-  </head>
-  <body>
+</head>
+<body>
 
-    <div id="spitoshare-app">
+<div id="spitoshare-app">
 
-      <div id="outer-container">
+    <div id="outer-container">
         <core-drawer-panel id="drawerPanel" forceNarrow>
-          <core-header-panel id="site-drawer" drawer>
-            <core-toolbar id="site-drawer-header">
-              <span>Menu</span>
-            </core-toolbar>
-            <core-menu id="site-drawer-menu" selected="0">
-              <core-item label="Home"></core-item>
-              <core-item label="Usage Hints"></core-item>
-              <core-item label="FAQ"></core-item>
-              <core-item label="About"></core-item>
-            </core-menu>
+            <core-header-panel id="site-drawer" drawer>
+                <core-toolbar id="site-drawer-header">
+                    <span>Menu</span>
+                </core-toolbar>
+                <core-menu id="site-drawer-menu" selected="0">
+                    <core-item label="Home"></core-item>
+                    <core-item label="Usage Hints"></core-item>
+                    <core-item label="FAQ"></core-item>
+                    <core-item label="About"></core-item>
+                </core-menu>
 
-            <div id="site-bottom-copyright">
-              <hr/>
-              <p>&copy; 2015 - Lambros Petrou</p>
-            </div>
-          </core-header-panel>
+                <div id="site-bottom-copyright">
+                    <hr/>
+                    <p>&copy; 2015 - Lambros Petrou</p>
+                </div>
+            </core-header-panel>
 
-          <core-header-panel main>
-            <core-toolbar id="site-header">
-              <!--<paper-icon-button id="navicon" icon="menu" on-tap="{{toggleDrawer}}></paper-icon-button>-->
-              <paper-icon-button id="navicon" icon="menu" core-drawer-toggle></paper-icon-button>
+            <core-header-panel main>
+                <core-toolbar id="site-header">
+                    <!--<paper-icon-button id="navicon" icon="menu" on-tap="{{toggleDrawer}}></paper-icon-button>-->
+                    <paper-icon-button id="navicon" icon="menu" core-drawer-toggle></paper-icon-button>
                       <span id="site-header-title">
                           <span id="site-header-logo"><!--<paper-icon-button icon="polymer"></paper-icon-button>-->
                               <span><img src="imgs/spito-share.png"></span>
@@ -80,79 +82,101 @@
                           Spito Share <sup><em>BETA</em></sup>
                       </span>
 
-              <span flex></span>
+                    <span flex></span>
 
-              <paper-icon-button id="btnNewSpit" icon="create" title="Create new spit"></paper-icon-button>
-              <paper-icon-button id="btnFindSpit" icon="search" title="Search for a spit"></paper-icon-button>
-            </core-toolbar>
+                    <paper-icon-button id="btnNewSpit" icon="create" title="Create new spit"></paper-icon-button>
+                    <paper-icon-button id="btnFindSpit" icon="search" title="Search for a spit"></paper-icon-button>
+                </core-toolbar>
 
-            <div id="outer-content-header">
-              <div id="content-header">
-                <paper-tabs selected="0">
-                  <paper-tab id="tab-url">URL Redirect</paper-tab>
-                  <paper-tab id="tab-src">Text &amp; Source Code</paper-tab>
-                </paper-tabs>
-              </div>
-            </div>
+                <!--
+                <div id="outer-content-header">
+                    <div id="content-header">
+                      <paper-tabs selected="0">
+                        <paper-tab id="tab-url">URL Redirect</paper-tab>
+                        <paper-tab id="tab-src">Text &amp; Source Code</paper-tab>
+                      </paper-tabs>
+                    </div>
+                </div>
+                -->
 
-            <div id="outer-content">
-              <div id="content-container" class="content">
+                <div id="outer-content">
+                    <div id="content-container" class="content">
 
-                <div id="editor-tools" class="group-clearfix">
-                  <div id="editor-tools-buttons">
-                    <ul>
-                      <li>
-                        <paper-button raised ng-click="toggle()">
-                          create
-                        </paper-button>
-                      </li>
-                      <li>
-                        <paper-button raised ng-click="toggle()">
-                          clear
-                        </paper-button>
-                      </li>
-                      <li>
-                        <paper-button raised ng-click="toggle()" disabled>
-                          copy
-                        </paper-button>
-                      </li>
-                    </ul>
-                  </div>
+                        <div id="editor-tools" class="group-clearfix">
+
+                            <div id="input-mode-tools">
+                                <paper-radio-group selected="url">
+                                    <paper-radio-button name="url" label="URL shortener"></paper-radio-button>
+                                    <paper-radio-button name="src" label="Text &amp; Source Code"></paper-radio-button>
+                                </paper-radio-group>
+                            </div>
+
+                            <div id="editor-tools-buttons">
+                                <ul>
+                                    <li>
+                                        <paper-button ng-click="toggle()">
+                                            create
+                                        </paper-button>
+                                    </li>
+                                    <li>
+                                        <paper-button ng-click="toggle()">
+                                            clear
+                                        </paper-button>
+                                    </li>
+                                    <li>
+                                        <paper-button raised ng-click="toggle()" disabled>
+                                            copy
+                                        </paper-button>
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                        <div id="editor">
+                            <textarea id="editor-text" class="editor-input-text" name="editor-text" spellcheck="true"
+                                      autofocus></textarea>
+                        </div>
+
+                        <div id="editor-tools-bottom">
+                            <ul>
+                                <li>
+                                    <div id="editor-exp">
+                                        <div id="editor-exp-slider" class="editor-exp-slider"></div>
+                                        <div id="editor-exp-val">
+                                            <span id="editor-exp-val-text"></span>
+                                            <span id="editor-exp-val-value"></span>
+                                            <span id="editor-exp-val-unit">
+                                                <paper-radio-group selected="m">
+                                                    <paper-radio-button name="m" label="Minutes"></paper-radio-button>
+                                                    <paper-radio-button name="h" label="Hours"></paper-radio-button>
+                                                    <paper-radio-button name="d" label="Days"></paper-radio-button>
+                                                    <paper-radio-button name="M" label="Months"></paper-radio-button>
+                                                </paper-radio-group>
+                                            </span>
+                                            <!--
+                                            <select id="editor-exp-val-unit">
+                                                <option value="m">minutes</option>
+                                                <option value="h">hours</option>
+                                                <option value="d">days</option>
+                                                <option value="M">months</option>
+                                            </select>
+                                            -->
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
                 </div>
 
-                <div id="editor">
-                  <textarea id="editor-text" class="editor-input-text" name="editor-text" spellcheck="true" autofocus></textarea>
-                </div>
-
-                  <div id="editor-tools-bottom">
-                      <ul>
-                          <li>
-                              <div id="editor-exp">
-                                  <div id="editor-exp-slider" class="editor-exp-slider"></div>
-                                  <div id="editor-exp-val">
-                                      <span id="editor-exp-val-text"></span>
-                                      <span id="editor-exp-val-value"></span>
-                                      <select id="editor-exp-val-unit">
-                                          <option value="m">minutes</option>
-                                          <option value="h">hours</option>
-                                          <option value="d">days</option>
-                                          <option value="M">months</option>
-                                      </select>
-                                  </div>
-                              </div>
-                          </li>
-                      </ul>
-                  </div>
-
-              </div>
-            </div>
-
-          </core-header-panel>
+            </core-header-panel>
         </core-drawer-panel>
-      </div>
-
     </div>
 
-    <script type="application/dart" src="spitoshare_main.dart"></script>
-  </body>
+</div>
+
+<script type="application/dart" src="spitoshare_main.dart"></script>
+</body>
 </html>
