added spito api handler and parser of json response

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -88,7 +88,7 @@
                             <div id="editor-tools-buttons">
                                 <ul>
                                     <li>
-                                        <paper-button ng-click="toggle()">
+                                        <paper-button id="btnEditorCreate">
                                             create
                                         </paper-button>
                                     </li>
