working router - before refactoring the code into its own library

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -63,8 +63,8 @@
 
                     <span flex></span>
 
-                    <paper-icon-button id="btnNewSpit" icon="create" title="Create new spit"></paper-icon-button>
-                    <paper-icon-button id="btnFindSpit" icon="search" title="Search for a spit"></paper-icon-button>
+                    <a href="#/view/5"><paper-icon-button id="btnNewSpit" icon="create" title="Create new spit"></paper-icon-button></a>
+                    <a href="#/"><paper-icon-button id="btnFindSpit" icon="search" title="Search for a spit"></paper-icon-button></a>
                 </core-toolbar>
 
                 <div id="outer-content-header">
