refactoring a bit moving things into SpitEditor

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html ng-app xmlns="http://www.w3.org/1999/html">
+<html>
 <head>
     <meta charset="utf-8">
     <title>Spito Share v1.0</title>
@@ -114,7 +114,7 @@
                             <div id="spito-editor">
 
                                 <div id="editor">
-                                <textarea id="editor-text" class="editor-input-text disabled-element" name="editor-text"
+                                    <textarea id="editor-text" class="editor-input-text disabled-element" name="editor-text"
                                           spellcheck="true"
                                           autofocus required=""
                                           placeholder="Enter your text Or your source code here"></textarea>
@@ -157,6 +157,9 @@
                                     <input id="spit-id" class="editor-input-text" name="spit-id" maxlength="20" type="text"
                                            autofocus required="" placeholder="Enter the Spit ID you want to display"/>
                                     <button type="submit"><paper-button raised="">View Spit</paper-button></button>
+                                    <!-- pencil and search icons -->
+                                    <!--<svg viewBox="0 0 24 24" height="100%" width="100%" preserveAspectRatio="xMidYMid meet" fit="" style="pointer-events: none; display: block;"><g><path d="M3 17.25v3.75h3.75l11.06-11.06-3.75-3.75-11.06 11.06zm17.71-10.21c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"></path></g></svg>-->
+                                    <!--<svg viewBox="0 0 24 24" height="100%" width="100%" preserveAspectRatio="xMidYMid meet" fit="" style="pointer-events: none; display: block;"><g><path d="M15.5 14h-.79l-.28-.27c.98-1.14 1.57-2.62 1.57-4.23 0-3.59-2.91-6.5-6.5-6.5s-6.5 2.91-6.5 6.5 2.91 6.5 6.5 6.5c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99 1.49-1.49-4.99-5zm-6 0c-2.49 0-4.5-2.01-4.5-4.5s2.01-4.5 4.5-4.5 4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5z"></path></g></svg>-->
                                 </form>
 
                                 <div id="view-spit-errors" class="disabled-element"></div>
