--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -102,6 +102,8 @@
 
                             </div>
 
+                            <div id="new-spit-errors" class="disabled-element"></div>
+
                             <div id="spito-editor">
 
                                 <div id="editor">
