added link to the title

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -63,7 +63,7 @@
                           <span id="site-header-logo">
                               <span><img src="imgs/spito-share.png"></span>
                           </span>
-                          Spito Share <sup><em>BETA</em></sup>
+                          <a href="http://cyari.es/spito/">Spito Share <sup><em>BETA</em></sup></a>
                       </span>
 
                     <span flex></span>
